force-app/main/default/objects/SupportCaseIntelligence__c/SupportCaseIntelligence__c.object-meta.xml
<CustomObject>
    <label>SupportCaseIntelligence</label>
    <nameField>
        <displayFormat>SCI-{0000000000}</displayFormat>
        <label>SupportCaseIntelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupportCaseIntelligences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>