force-app/main/default/objects/SupportCaseIntelligence__c/fields/AutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>AutoGenerated__c</fullName>
    <description>https://rubrik.atlassian.net/browse/CS21-3051 : Sentry AI Usage and used on case</description>
    <label>Automatically Generated</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>