force-app/main/default/objects/SupportCaseIntelligence__c/fields/Citations__c.field-meta.xml
<CustomField>
    <fullName>Citations__c</fullName>
    <description>CS21-3404: Add new fields to SupportCaseIntelligence object</description>
    <label>Citations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>