force-app/main/default/objects/SupportCaseIntelligence__c/fields/Complexity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Reason__c</fullName>
    <description>CS21-3404: Add new fields to SupportCaseIntelligence object</description>
    <label>Complexity Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>