force-app/main/default/objects/SupportCaseIntelligence__c/fields/Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score__c</fullName>
    <description>CS21-3404: Add new fields to SupportCaseIntelligence object</description>
    <label>Complexity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>