force-app/main/default/objects/SupportCaseIntelligence__c/fields/Expected_TTR__c.field-meta.xml
<CustomField>
    <fullName>Expected_TTR__c</fullName>
    <description>CS21-3404: Add new fields to SupportCaseIntelligence object</description>
    <label>Expected TTR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>