force-app/main/default/objects/SupportCaseIntelligence__c/fields/Expected_TTR_Range__c.field-meta.xml
<CustomField>
    <fullName>Expected_TTR_Range__c</fullName>
    <description>CS21-3404: Add new fields to SupportCaseIntelligence object</description>
    <label>Expected TTR Range</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>