force-app/main/default/objects/SupportCaseIntelligence__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>CS21-3212</description>
    <label>Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>